--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<p>And there are no hoverboards or flying cars.<br />
 							Just apps. Lots of mother flipping apps.</p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image"><img src="https://scontent.fbom7-1.fna.fbcdn.net/v/t1.0-0/p206x206/18582019_1931054337109768_1936878307774682030_n.jpg?oh=3cab1a174fd5460b3534c8d9bc69551d&oe=599F0F22" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -199,7 +199,7 @@
 						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://pawarshubh">Shubh</a></li>
 					</ul>
 				</footer>
 
