--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								</ul>
 							</li>
 							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button special">Contact Me(sjpawar99@gmail.com)</a></li>
+							<li><a href="#" class="button special">Contact Me</a></li>
 						</ul>
 					</nav>
 				</header>
