--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Good code is its own best documentation</h2>
+										<h2>"Good code is its own best documentation"</h2>
 										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
 									</header>
 								</div>
