--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								<div class="4u 12u$(medium)">
 									<header>
 										<h2>“Good code is its own best documentation”</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<p>Computer code is essentially a list of instructions that can be run by a certain program.</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
