--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>Writing Code
+									Most code consists of plain-text documents so they can be used for many different programs.
+									A unique file extension is given to the document to indicate the nature of the code. 
+									 For example, a file created using Python is saved with a .py extension, like 'myprogram.py.'.
+									However, the actual content of the file is still just plain text. .</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
