--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>Writing Code
-									Most code consists of plain-text documents so they can be used for many different programs.
+									<p><b>Writing Code</b></p>
+									<p>Most code consists of plain-text documents so they can be used for many different programs.
 									A unique file extension is given to the document to indicate the nature of the code. 
 									 For example, a file created using Python is saved with a .py extension, like 'myprogram.py.'.
 									However, the actual content of the file is still just plain text. .</p>
