--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
 									However, the actual content of the file is still just plain text. .</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>Because most code is in plain text, you can write code using a basic word processor or text editor.
+									However, it is much more effective to use a software application that is specifically designed for coding
+									in a particular language.For example, when you write a document in plain English,
+									you would use word processor software,which can assist you with things such as formatting, spelling, and grammar.
+									Similarly, a code editor provides tools such as syntax checking. 
+									Syntax is to code what spelling and grammar are to writing English. </p>
 								</div>
 							</div>
 						</div>
