--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p><b>Writing Code</b></p>
+									<p><b><em>Writing Code</em></b></p>
 									<p>Most code consists of plain-text documents so they can be used for many different programs.
 									A unique file extension is given to the document to indicate the nature of the code. 
 									 For example, a file created using Python is saved with a .py extension, like 'myprogram.py.'.
@@ -97,10 +97,24 @@
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2><b><em>“Programs And Programmers”</em></b></h2>
+							<p>Programmers use an integrated development environment for
+							   formatting code, checking syntax, and testing programs.</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>Steps to Writing a Program
+
+                                                  ★ The general steps for writing a program include the following:
+
+                                                  • Understand the problem you are trying to solve
+                                                  • Design a solution
+                                                  • Draw a flow chart
+                                                  • Write pseudo-code
+                                                  • Write code
+                                                  • Test and debug
+                                                  • Test with real-world users
+                                                  • Release program
+                                                  • Iterate the steps for the next version
+						</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
