--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
 							<p>Programmers use an integrated development environment for
 							   formatting code, checking syntax, and testing programs.</p>
 						</header>
-						<p>Steps to Writing a Program
-						  • Understand the problem you are trying to solve
-                                                  • Design a solution
-                                                  • Draw a flow chart
-                                                  • Write pseudo-code
-                                                  • Write code
-                                                  • Test and debug
-                                                  • Test with real-world users
-                                                  • Release program
-                                                  • Iterate the steps for the next version
+						<p>Steps to Writing a Program</p>
+					        <p> • Understand the problem you are trying to solve
+                                                    • Design a solution
+                                                    • Draw a flow chart
+                                                    • Write pseudo-code
+                                                    • Write code
+                                                    • Test and debug
+                                                    • Test with real-world users
+                                                    • Release program
+                                                    • Iterate the steps for the next version
 						</p>
 						<ul class="actions">
 						</ul>
