--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 						<span class="image"><img src="https://scontent.fbom7-1.fna.fbcdn.net/v/t1.0-0/p206x206/18582019_1931054337109768_1936878307774682030_n.jpg?oh=3cab1a174fd5460b3534c8d9bc69551d&oe=599F0F22" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
+					<a href="#one" class="goto-previous scrolly">Previous</a>
 				</section>
 
 			<!-- One -->
@@ -90,6 +91,7 @@
 						</div>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
+					<a href="#two" class="goto-previous scrolly">Previous</a>
 				</section>
 
 			<!-- Two -->
@@ -116,6 +118,7 @@
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
+					<a href="#three" class="goto-previous scrolly">Previous</a>
 				</section>
 
 			<!-- Three -->
@@ -136,10 +139,10 @@
 						    •PHP		
 						</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
+					<a href="#four" class="goto-previous scrolly">Previous</a>
 				</section>
 
 			<!-- Four -->
