--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 							</li>
 							<li><a href="elements.html">Elements</a></li>
 							<li><a href="#" class="button special">Contact Me</a></li>
+							<li><a href="#" class="button special">sjpawar99@gmail.com</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -91,7 +92,6 @@
 						</div>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
-					<a href="#two" class="goto-previous scrolly">Previous</a>
 				</section>
 
 			<!-- Two -->
@@ -118,7 +118,6 @@
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
-					<a href="#three" class="goto-previous scrolly">Previous</a>
 				</section>
 
 			<!-- Three -->
@@ -142,7 +141,6 @@
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
-					<a href="#four" class="goto-previous scrolly">Previous</a>
 				</section>
 
 			<!-- Four -->
