--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
 					<div class="content">
 						<header>
 							<h2><b><em>“Some Basic Programming Languages”</em></b></h2>
-							<p></p>
 						</header>
-						<p> •SQL
-						    •Java
-						    •JavaScript
-						    •C	
-						    •C#	
-						    •C++
-						    •Python
-						    •PHP		
+						<p>
+						 •SQL<br>
+						 •Java<br>
+						 •JavaScript<br>
+						 •C<br>	
+						 •C#<br>	
+						 •C++<br>
+						 •Python<br>
+					         •PHP<br>		
 						</p>
 						<ul class="actions">
 						</ul>
