--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
 							<h2><b><em>“Some Basic Programming Languages”</em></b></h2>
 						</header>
 						<p>
-						 •SQL<br>
-						 •Java<br>
-						 •JavaScript<br>
-						 •C<br>	
-						 •C#<br>	
-						 •C++<br>
-						 •Python<br>
-					         •PHP<br>		
+							<em>•SQL</em><br>
+						 <em>•Java</em><br>
+						 <em>•JavaScript</em><br>
+						 <em>•C</em><br>	
+						 <em>•C#</em><br>	
+						 <em>•C++</em><br>
+						 <em>•Python</em><br>
+					         <em>•PHP</em><br>		
 						</p>
 						<ul class="actions">
 						</ul>
@@ -147,8 +147,8 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>Real Programmers Dont Comment Their Codes..!!Because
+							If It Was Hard To Write... It must Be Hard To Read..!!</h2>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
