--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								</ul>
 							</li>
 							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button special">Contact Me</a></li>
+							<li><a href="#" class="button special">Contact Me →</a></li>
 							<li><a href="#" class="button special">sjpawar99@gmail.com</a></li>
 						</ul>
 					</nav>
@@ -58,8 +58,7 @@
 						<span class="image"><img src="https://scontent.fbom7-1.fna.fbcdn.net/v/t1.0-0/p206x206/18582019_1931054337109768_1936878307774682030_n.jpg?oh=3cab1a174fd5460b3534c8d9bc69551d&oe=599F0F22" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
-					<a href="#one" class="goto-previous scrolly">Previous</a>
-				</section>
+					</section>
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
@@ -148,7 +147,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Real Programmers Dont Comment Their Codes..!!Because
-							If It Was Hard To Write... It must Be Hard To Read..!!</h2>
+							If It Was Hard To Write..... It must Be Hard To Read..!!</h2>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
@@ -169,18 +168,18 @@
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Sharing</h3>
+									<p>Sharing is good but never share the the knowledge you are good at for free.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Cut,Copy,Paste</h3>
+									<p>Cut,Copy,Paste was my life then found hacking and learned being original. </p>
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Firewall Protection</h3>
+									<p>Firewall seems both scary and protective t the same time.Keep your codes safe. </p>
 								</section>
 							</div>
 						</div>
