--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-lock"></span>
 									<h3>Firewall Protection</h3>
-									<p>Firewall seems both scary and protective t the same time.Keep your codes safe. </p>
+									<p>Firewall seems both scary and protective at the same time.Keep your codes safe. </p>
 								</section>
 							</div>
 						</div>
