--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
 						</div>
 						<footer class="major">
 							<ul class="actions">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="#" class="button">I'm A Hacker</a></li>
+								<li><a href="#" class="button">Dont Underestimate A Hacker</a></li>
 							</ul>
 						</footer>
 					</div>
@@ -195,8 +196,8 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Congrats</h2>
+							<p>,God, My brain and all the sites wich helped me and all my hacker friends.</p>
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
@@ -218,7 +219,7 @@
 						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://pawarshubh">Shubh</a></li>
+						<li>&copy; pawarshubh.</li><li>Design: <a href="http://pawarshubh">Shubh</a></li>
 					</ul>
 				</footer>
 
