--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
 						</div>
 						<footer class="major">
 							<ul class="actions">
-								<li><a href="#" class="button">I'm A Hacker</a></li>
-								<li><a href="#" class="button">Dont Underestimate A Hacker</a></li>
+								<li><a href="#" class="button">I Am A Hacker</a></li>
 							</ul>
 						</footer>
 					</div>
