--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 						</div>
 						<footer class="major">
 							<ul class="actions">
-								<li><a href="#" class="button">I Am A Hacker</a></li>
+								<li><a href="#" class="button">I AM A Hacker</a></li>
 							</ul>
 						</footer>
 					</div>
@@ -196,7 +196,7 @@
 					<div class="container">
 						<header>
 							<h2>Congrats</h2>
-							<p>,God, My brain and all the sites wich helped me and all my hacker friends.</p>
+							<p>God, My brain and all the sites wich helped me and all my hacker friends.</p>
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
@@ -218,7 +218,7 @@
 						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; pawarshubh.</li><li>Design: <a href="http://pawarshubh">Shubh</a></li>
+						<li>&copy; pawarshubh.io</li><li>Design: <a href="http://pawarshubh">Shubh</a></li>
 					</ul>
 				</footer>
 
