--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					<div class="container">
 						<header>
 							<h2>Congrats</h2>
-							<p>God, My brain and all the sites wich helped me and all my hacker friends.</p>
+							<p>God, My Brain, All The Sites Which Helped Me And All My Hacker Friends.</p>
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
