--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
 									<h3>Sharing</h3>
-									<p>Sharing is good but never share the the knowledge you are good at for free.</p>
+									<p>Sharing is good but never share the knowledge you are good at for free.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-file"></span>
